--- a/login.html
+++ b/login.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alugel</title>
+
+    <!--Link Externo do style.css-->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+
 </head>
 <body>
     <!--Navbar-->
@@ -44,27 +47,30 @@
        
     <!--Footer-->
     <section class="footer footer-container container" >
-        <h2>Me alugando</h2>
+        <h2>Me Alugando</h2>
         <div class="footer-box">
-            <h3>quick links</h3>
-            <a href="#">agencia</a>
-            <a href="#">agencia</a>
-            <a href="#">agencia</a>
-            <a href="#">agencia</a>
+            <h3>Atendimento</h3>
+            <a href="#">Central de Ajuda</a>
+            <a href="#">Antidiscriminação</a>
+            <a href="#">Apoio à pessoa com deficiência</a>
+            <a href="#">Opções de cancelamento</a>
+            <a href="#">Reporte um problema no bairro</a>
         </div>
         <div class="footer-box">
-            <h3>quick links</h3>
-            <a href="#">agencia</a>
-            <a href="#">agencia</a>
-            <a href="#">agencia</a>
-            <a href="#">agencia</a>
+            <h3>Hospedagem</h3>
+            <a href="#">Anuncie seu espaço no MeAlugando</a>
+            <a href="#">Recursos para anfitriões</a>
+            <a href="#">Hospedagem responsável</a>
+            <a href="#">Participe de uma aula gratuita de hospedagem</a>
         </div>
         <div class="footer-box">
-            <h3>contatos</h3>
-            <a href="#">agencia</a>
-            <a href="#">agencia</a>
-            <a href="#">agencia</a>
-            <a href="#">agencia</a>
+            <h3>Trabalhe com a gente</h3>
+            <a href="#">Carreiras</a>
+            <a href="#">Fotografia</a>
+            <a href="#">Vistorias</a>
+            <a href="#">investidores</a>
+            <a href="#">Parceria de Reparos</a>
+            <a href="#">Parceria com Portarias</a>
             <div class="social">
                 <a href="#"><i class='bx bxl-facebook-circle' ></i></a>
                 <a href="#"><i class='bx bxl-twitter' ></i></a>
