--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
     </header>
     <section class="home container" id="home">
         <div class="home-text">
-            <h1>Você muda, sua vida muda</h1>
-            <a href="" class="btn">Login</a>
+            <h1>Você muda, sua vida muda.</h1>
+            <P>     Bem-vindo à nossa plataforma dedicada à compra, venda e aluguel de casas.</P>
+            <p> Aqui, você encontrará uma ampla variedade de propriedades disponíveis,  </p>
+            <p>desde aconchegantes casas familiares até luxuosas residências. Navegue</p>
+            <p> pela nossa seleção e encontre o lar dos seus sonhos.</p>
+            <br>
+            <a href="cadastra.html" class="btn">Login</a>
         </div>
     </section>
     <!-- link compra-->
@@ -64,23 +69,25 @@
     <section class="sales container" id="sales">
         <!--box 1 -->
         <div class="box">
-            <i class='bx bx-user'></i>
-            <h3>Torne seu sonho verdadeiro</h3>
-            <p>lorem ipsum dolor sit, amet consectetur adipisicing</p>
+            <i class='bx bx-home'></i>
+            <h3>+ de 5 mil imóveis</h3>
+            <p>Nossa variedade de anúncios oferece as melhores opções de imóveis para você.</p>
 
         </div>
           <!--box 2-->
           <div class="box">
-            <i class='bx bx-desktop'></i>
-            <h3>Comece sua assinatura</h3>
-            <p>lorem ipsum dolor sit, amet consectetur adipisicing</p>
+            <i class='bx bx-search-alt-2' ></i>
+            <h3>Encontre o imóvel que deseja</h3>
+            <p>Utilize de nossos filtros que foram pensados para melhorar
+             e facilitar a sua experiência em busca do tão sonhado imóvel!</p>
 
         </div>
           <!--box 3-->
           <div class="box">
-            <i class='bx bx-home-alt'></i>
-            <h3>Aproveite sua nova casa</h3>
-            <p>lorem ipsum dolor sit, amet consectetur adipisicing</p>
+            <i class='bx bx-mobile'></i>
+            <h3>Navegue de onde estiver</h3>
+            <p>Aproveite de nossa versatilidade e faça sua busca em qualquer lugar
+             e em qualquer dispositivo.</p>
 
         </div>
     </section>
@@ -89,7 +96,8 @@
         <div class="heading">
             <span>recente</span>
             <h2>Imóveis em destaque</h2>
-            <p>lorem ipsum dolor sit, amet <br>consectetur adipisicing</p>
+            <p>Explore nossas listagens recentes e descubra as <br>
+            melhores opções disponíveis no mercado.</p>
         </div>
         <div class="properties-container container">
             <!--Box1-->
